platform-charts/keycloak/templates/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true

      containers:
        - name: keycloak
          image: docker.io/keycloak/keycloak@sha256:9409c59bdfb65dbffa20b11e6f18b8abb9281d480c7ca402f51ed3d5977e6007
          args:
            - start
          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "2"
              memory: "2Gi"

          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            allowPrivilegeEscalation: false

          livenessProbe:
            httpGet:
              path: /health/live
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 5

          readinessProbe:
            httpGet:
              path: /health/ready
              port: 9000
            initialDelaySeconds: 120
            periodSeconds: 15
            timeoutSeconds: 5
            failureThreshold: 3

          volumeMounts:
            - name: keycloak-data
              mountPath: /opt/keycloak/data

      volumes:
        - name: keycloak-data
          persistentVolumeClaim:
            claimName: keycloak-pvc
