platform-charts/keycloak/templates/keycloak-nodeport-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodeport-keycloak
spec:
  type: NodePort
  selector:
    app: keycloak
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30089
