platform-charts/keycloak/templates/keyclaok-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-http-route
spec:
  parentRefs:
    - name: default-cilium-gateway
      sectionName: https
      namespace: cilium
  hostnames:
    - "keycloak.192.168.100.243.sslip.io"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 80
